<resources>
    <string name="app_name">红云医疗</string>
    <string-array name="rb_names">
        <item>消息</item>
        <item>会诊</item>
        <item>订阅</item>
        <item>通讯录</item>
        <item>我</item>
    </string-array>
    <string name="deny">未通过</string>
    <string name="please_wait_moment">请稍后...</string>
    <string name="has_passed">已通过</string>
    <string name="deny_content">原因：您填写的资料有误，上传的证件不合格，请您重新认证！谢谢！</string>
    <string name="reconfig">重新认证</string>
    <string name="save">保存</string>
    <string name="input_newpwd">输入6位数字新密码</string>
    <string name="auditing">审核中</string>
    <string name="auditinging">您的认证资料已提交成功，预计一个工作日完成审核</string>
    <string name="please_wait">请您耐心等待！</string>
    <string name="audit_telephone">审核专线:</string>
    <string name="im_doctor">我是医生</string>
    <string name="im_medicalist">我是医疗从业者</string>
    <string name="please_choose_type">为了更好的服务于您, 请选择您的身份类型</string>
    <string name="please_resubmit">修改资料 重新提交审核>></string>
    <string name="collectoin_time">收藏时间</string>
    <string name="time">时间</string>
    <string name="no_collectoin_content">还没有收藏内容哦！</string>
    <string name="creater">创建者</string>
    <string name="not_allow_open">本应用暂不支持打开此类文件</string>
    <string name="open_from_other">请使用其他应用打开</string>
    <string name="word_content">文字内容</string>
    <string name="find_hospital">搜索医院</string>
    <string name="now_no_content">还没有收藏内容哦！</string>
    <string name="find_department">搜索科室</string>
    <string name="please_write_serious">请填写真实资料,认证通过即可使用</string>
    <string name="give_pass">提交审核</string>
    <string name="nub_num">视讯号:</string>
    <string name="input_name">输入姓名</string>
    <string name="input_name_nomodify">(请填写真实姓名,提交后不可修改)</string>
    <string name="choose_hospital">选择所在医院</string>
    <string name="remarks">备注</string>
    <string name="edit">编辑</string>
    <string name="sd_non_existent">源文件在SD卡上不存在</string>
    <string name="unlegal_pic">不是合法的图片文件,请重新选择图片</string>
    <string name="write_hospital_name">请留下医院名称,以便审核</string>
    <string name="choose_room">选择科室</string>
    <string name="choose_proffesional">选择职称</string>
    <string name="input_telephone">输入科室电话</string>
    <string name="upload_certification">上传医师执业证书或手持工牌照</string>
    <string name="config_pic">请确保图片内容清晰可见</string>
    <string name="example">示例：</string>
    <string name="handle_pic">手持工牌照</string>
    <string name="or">或</string>
    <string name="doctor_certification">医师执业证书</string>
    <string name="email">邮箱</string>
    <string name="input_email">输入常用邮箱地址</string>
    <string name="input_psw">登录密码</string>
    <string name="data1">yyyy年MM月dd日 HH时mm分</string>
    <string name="set_psw">设置登录密码（6位数字组成）</string>
    <string name="next">下一步</string>
    <string name="voice_setting">声音设置</string>
    <string name="voice_detect">声音检测</string>
    <string name="verification_code">验证码</string>
    <string name="input_verification_code">输入验证码</string>
    <string name="reget">重新获取</string>
    <string name="new_psw">新密码</string>
    <string name="verification_code_passed">验证码已发往您的电子邮箱:</string>
    <string name="liuying">liuying@butel.com</string>
    <string name="reset_psw">请及时获取验证码进行重置密码！</string>
    <string name="get_code">获取验证码</string>
    <string name="data_loading">数据加载中...</string>
    <string name="now_no_submit">暂无保存订阅</string>
    <string name="data_loading_fail">加载失败,点击页面重试</string>
    <string name="writer">文章作者</string>
    <string name="meeting">会诊</string>
    <string name="medical_media">医媒体</string>
    <string name="me">我</string>
    <string name="jiazai_fail">加载失败,下拉刷新</string>
    <string name="just_looking">随便看看></string>
    <string name="company">公司</string>
    <string name="input_company">输入公司</string>
    <string name="bumen">部门</string>
    <string name="input_bumen">输入部门</string>
    <string name="input_code">填写验证码</string>
    <string name="job">职位</string>
    <string name="certificatied">已认证</string>
    <string name="office_phone">办公电话</string>
    <string name="wechat">微信好友</string>
    <string name="qq">QQ</string>
    <string name="input_job">输入职位</string>
    <string name="company_telephone">公司电话</string>
    <string name="input_company_telephone">输入公司电话</string>
    <string name="upload_pic">上传手持工牌照或名片</string>
    <string name="exist">注销</string>
    <string name="email_address">邮箱地址</string>
    <string name="my_account">我的账户</string>
    <string name="account_type">账户类型</string>
    <string name="free_type">免费用户</string>
    <string name="country">国家</string>
    <string name="chinese">中国+86</string>
    <string name="email_register">邮箱注册</string>
    <string name="email_check">系统向该邮箱号下发邮件，请注意查收！</string>
    <string name="phone_check">系统向该手机号下发短信，请注意查收！</string>
    <string name="registering">注册中</string>
    <string name="please_indentify_agreement">请阅读并同意服务协议</string>
    <string name="email_wrong_type">邮箱格式不正确</string>
    <string name="phone_wrong_type">手机号格式不正确</string>
    <string name="pwd_wrong_type">密码格式不正确</string>
    <string name="titlebar_middle_message">消息</string>
    <string name="scan_message">将二维码放入框内，即可自动扫描</string>
    <string name="setting_name_default">名称</string>
    <string name="video_num">视讯号：</string>
    <string name="setting_accountnum">视讯号：888888888</string>
    <string name="my_consultation">会诊室</string>
    <string name="my_scan">扫一扫</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_setting">设置</string>
    <string name="open_mic">请开启麦克风权限</string>
    <string name="open_mic_failed">开启麦克风权限失败</string>
    <string name="my_about">关于</string>
    <string name="udt_chat_room_activity_not_finish_dt">请先退出视频会议</string>
    <string name="medical_main">医媒体主页</string>
    <string name="titlebar_middle_scan">二维码</string>
    <string name="notification_no_space">空间不足提示</string>
    <string name="notification_no_space_content">存储空间不足，可能影响部分功能使用，请注意清理空间！</string>
    <string name="pull_to_refresh_for_release">松开立即刷新</string>
    <string name="pull_to_refresh_for_drop_down">下拉刷新</string>
    <string name="pull_to_refresh_for_now">正在刷新</string>
    <string name="pull_to_refresh_for_time_prefix">最近更新:</string>
    <string name="mycard_photo">头像</string>
    <string name="my_name">姓名</string>
    <string name="talking_time">发言时间</string>
    <string name="word_content_me">文字内容</string>
    <string name="jigou_name">机构名称</string>
    <string name="input_login_email">输入注册时的手机号/邮箱</string>
    <string name="my_account_id">视讯号</string>
    <string name="account">账号</string>
    <string name="loading_failed">加载失败,下拉刷新数据</string>
    <string name="my_account_num">88888888</string>
    <string name="my_phone_id">手机号</string>
    <string name="my_telephone_id">电话号码</string>
    <string name="input_phone_id">输入手机号码</string>
    <string name="my_phone_num">18888888888</string>
    <string name="scan">二维码名片</string>
    <string name="hospital">医院</string>
    <string name="room">科室</string>
    <string name="profession">职称</string>
    <string name="room_phone">科室电话</string>
    <string name="room_phone_num">88888888</string>
    <string name="certification">认证资料</string>
    <string name="certification_text">认证详情</string>
    <string name="modify_password">修改密码</string>
    <string name="app_copy_right_2">All Rights Reserved</string>
    <string name="app_copy_right_1">Copyrights © 2015Redcdn</string>
    <string name="about_app_introduce">
        红云医疗是红云融通技术有限公司针对医疗行业推出的远程医疗可视产品，遵循“功能极致、操作极简”的产品设计理念，依托公司自建的医疗视频云服务平台，为客户提供远程视频诊疗、远程辅助诊疗、远程医疗咨询、手术在线直播、远程手术示教、远程医学培训等系列远程医疗服务。
    </string>
    <string name="about_app_btn">检查更新</string>
    <string name="app_webview_txt">极会诊官网</string>
    <string name="chat_vcard_title">名片</string>
    <string name="load_msg_fail">消息加载失败</string>
    <string name="select_vcard_title">选择名片</string>
    <string name="select_linkMan">选择</string>
    <string name="receiver_tip" formatted="false">%s 及其他 %d 人</string>
    <string name="chat_title_new">新消息</string>
    <string name="toast_no_vcard">未选中任何名片</string>
    <string name="confirm_send_vcard" formatted="false">发送 “%s” 的名片到当前消息里？</string>
    <string name="title_share_vcard">分享 %s 的名片</string>
    <string name="toast_sent">已发送</string>
    <string name="toast_add_linkman_ok">添加联系人成功</string>
    <string name="toast_add_linkman_nok">添加联系人失败</string>
    <string name="toast_add_linkman_nouser">用户不存在</string>
    <string name="toast_no_pic">图片不存在或已被删除</string>
    <string name="toast_no_aud">音频不存在或已被删除</string>
    <string name="toast_downloading_aud">音频文件正在下载，请稍后重试</string>
    <string name="toast_aud_damaged">音频文件格式不支持或已被损坏，无法播放</string>
    <string name="toast_no_video">视频不存在或已被删除</string>
    <string name="chat_resend">重发</string>
    <string name="chat_forward">转发</string>
    <string name="chat_copy">复制</string>
    <string name="chat_delete">删除</string>
    <string name="toast_copy_ok">已复制</string>
    <string name="tv_release_not_send">松开取消发送</string>
    <string name="tv_flingup_cancel">向上滑动取消</string>
    <string name="please_check_web">请检查网络是否已连接</string>
    <string name="cancel_load">加载取消</string>
    <string name="submit_add">+订阅</string>
    <string name="btn_add">添加</string>
    <string name="tv_add_linkman">添加对方为联系人？</string>
    <string name="tv_receivers">已选:</string>
    <string name="chat_video_title">视频</string>
    <string name="chat_video_record">拍摄视频</string>
    <string name="chat_pic_title">图片</string>
    <string name="toast_aud_rcd_short">录音时间太短</string>
    <string name="confirm_forward_notice" formatted="false">确定发送给 “%s” ？</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_no_notice">暂未收到消息</string>
    <string name="udt_str_no_notice">无消息记录</string>
    <string name="hard_loading">努力加载中</string>
    <string name="btn_send">发送</string>
    <string name="str_pic_thread">[图片]</string>
    <string name="str_video_thread">[视频]</string>
    <string name="str_vcard_thread">[名片]</string>
    <string name="str_audio_thread">[语音]</string>
    <string name="main_bottom_count_99">99+</string>
    <string name="str_butel_name">10000</string>
    <string name="date_yesterday">昨天</string>
    <string name="repaly_me">[有人@我]</string>
    <string name="str_draft_thread">[草稿]</string>
    <string name="taker_not_found">照相机启动失败</string>
    <string name="sd_unfound">存储卡没有准备完毕，请稍后重试</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="str_empty_video_contact">暂无联系人可选！</string>
    <string name="newfriend_has_passed_status">已添加</string>
    <string name="invite_contact">邀请</string>
    <string name="btn_ok">确定</string>
    <string name="voice">语音</string>
    <string name="name">名字</string>
    <string name="chat_content">聊天内容</string>
    <string name="use_other_app">用其他应用打开</string>
    <string name="talking_name">聊天者名字</string>
    <string name="other_physicians">其他</string>
    <string name="select_receive_message">选择联系人</string>
    <string name="call_jmeeting">召开视频会议</string>
    <string name="setting_meeting_setting">会诊设置</string>
    <string name="setting_web_title">网络设置</string>
    <string name="setting_web_tip">允许2G/3G/4G下进入会诊</string>
    <string name="setting_download_title">下载设置</string>
    <string name="setting_download_tip">允许2G/3G/4G自动下载安装包</string>
    <string name="cpu_version_too_low">CPU ABI version is too low, failed to start SIP service.
    </string>
    <string name="send_Vcard_dialog_title">发送名片</string>
    <string name="btn_cancle">取消</string>
    <string name="zhusu">主诉</string>
    <string name="data_load">加载数据中</string>
    <string name="subscribe">订阅</string>
    <string name="official_card">公众号名片</string>
    <string name="register_read">我已阅读</string>
    <string name="register_service_button">服务协议</string>
    <string name="reserve_treatment_success_number">预约号</string>
    <string name="reserve_treatment_success_to_meetingroom">查看详情</string>
    <string name="reserve_treatment_success_close">关闭</string>
</resources>