<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/systembg"
    android:orientation="vertical" >

    <include layout="@layout/titlebar"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="#d9d9d9"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:background="#ffffff" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/x24"
                android:text="@string/country"
                android:textColor="#2d2d2d"
                android:textSize="@dimen/x32" />


        <View
            android:layout_width="@dimen/x1"
            android:layout_height="@dimen/y60"
            android:background="#d9d9d9"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x85"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x20"
            android:text="@string/chinese"
            android:textColor="#2d2d2d"
            android:textSize="@dimen/x32" />
    </LinearLayout>



        <View
            android:layout_width="@dimen/x696"
            android:layout_height="@dimen/y1"
            android:background="#d9d9d9"
            android:layout_marginLeft="@dimen/x24"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:background="#ffffff" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/x24"
                android:text="@string/my_phone_id"
                android:textColor="#2d2d2d"
                android:textSize="@dimen/x32" />

        <View
            android:layout_width="@dimen/x1"
            android:layout_height="@dimen/y60"
            android:layout_gravity="center"
            android:background="#d9d9d9"
            android:layout_marginLeft="@dimen/x52"/>

        <EditText
            android:id="@+id/register_num_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x20"
            android:background="@null"
            android:digits="1234567890"
            android:hint="@string/input_phone_id"
            android:textColor="#2d2d2d"
            android:textSize="@dimen/x32"
            android:maxLength="11"
            android:inputType="number"
            android:textColorHint="#8d8d8d" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center" >

        <View
            android:layout_width="@dimen/x696"
            android:layout_height="@dimen/y1"
            android:background="#d9d9d9"
            android:layout_marginLeft="@dimen/x24"/>
        

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:background="#ffffff" >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/x24"
                android:text="@string/input_psw"
                android:textCursorDrawable="@null"
                android:textColor="#2d2d2d"
                android:textSize="@dimen/x32"/>


        <View
            android:layout_width="@dimen/x1"
            android:layout_height="@dimen/y60"
            android:layout_gravity="center"
            android:background="#d9d9d9"
            android:layout_marginLeft="@dimen/x20"/>

        <EditText
            android:id="@+id/register_pwd_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x20"
            android:background="@null"
            android:digits="1234567890"
            android:hint="@string/set_psw"
            android:textColor="#2d2d2d"
            android:maxLength="6"
            android:textSize="@dimen/x32"
            android:inputType="number"
            android:password="true"
            android:textColorHint="#8d8d8d" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center" >

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y1"
            android:background="#d9d9d9" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/y40"
        android:gravity="center_vertical">

        <CheckBox
            android:checked="false"
            android:id="@+id/agreement_cb"
            android:layout_width="@dimen/x30"
            android:layout_height="@dimen/y30"
            android:button="@null"
            android:background="@drawable/checkbox_style"
            android:layout_marginLeft="@dimen/x34"
            />


        <TextView
            android:layout_marginLeft="@dimen/x14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_read"
            android:textSize="@dimen/x24"
            android:textColor="#8d8d8d"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_service_button"
            android:id="@+id/phone_register_webview"
            android:textSize="@dimen/x24"
            android:textColor="@color/forgetpwd"/>

    </LinearLayout>

    <Button
        android:id="@+id/register_next_btn"
        android:layout_width="@dimen/x670"
        android:layout_height="@dimen/y94"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/y57"
        android:background="@drawable/button_selector"
        android:focusable="true"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textSize="@dimen/x34" />

    <TextView
        android:id="@+id/phone_to_emailtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y24"
        android:layout_gravity="center"
        android:text="@string/email_register"
        android:textColor="@color/forgetpwd"
        android:textSize="@dimen/x24"/>

</LinearLayout>