<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f0f6"
    android:orientation="vertical"
    >

    <include layout="@layout/titlebar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:background="#ffe0e0"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/x50"
            android:layout_height="@dimen/y50"
            android:layout_marginLeft="@dimen/x60"
            android:src="@drawable/doctor_extre" />

        <TextView
            android:id="@+id/medical_TV_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x30"
            android:text="@string/please_write_serious"
            android:textColor="#5e4646"
            android:textSize="@dimen/x28" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="#d9d9d9" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:layout_marginTop="@dimen/y40"
        android:background="#d9d9d9" />

    <include
        android:id="@+id/medical_number_tv"
        layout="@layout/number_tv" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="#d9d9d9" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:layout_marginTop="@dimen/y40"
        android:background="#d9d9d9" />

    <include
        android:id="@+id/medical_include_name"
        layout="@layout/name" />

    <ImageView
        android:layout_width="@dimen/x692"
        android:layout_height="@dimen/y1"
        android:layout_marginLeft="@dimen/x28"
        android:background="#d9d9d9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y96"
        android:background="#ffffff"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/y28"
            android:text="@string/company"
            android:textColor="#2d2d2d"
            android:textSize="@dimen/x32" />

        <cn.redcdn.hvs.accountoperate.info.LimitEditText
            android:id="@+id/medical_company_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x100"
            android:background="@null"
            android:focusable="true"
            android:hint="@string/input_company"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#8d8d8d"
            android:textSize="@dimen/x28" />

    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/x692"
        android:layout_height="@dimen/y1"
        android:layout_marginLeft="@dimen/x28"
        android:background="#d9d9d9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y96"
        android:background="#ffffff"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/y28"
            android:text="@string/bumen"
            android:textColor="#2d2d2d"
            android:textSize="@dimen/x32" />

        <cn.redcdn.hvs.accountoperate.info.LimitEditText
            android:id="@+id/medical_department_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x100"
            android:background="@null"
            android:focusable="true"
            android:hint="@string/input_bumen"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#8d8d8d"
            android:textSize="@dimen/x28" />

    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/x692"
        android:layout_height="@dimen/y1"
        android:layout_marginLeft="@dimen/x28"
        android:background="#d9d9d9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y96"
        android:background="#ffffff"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/y28"
            android:text="@string/job"
            android:textColor="#2d2d2d"
            android:textSize="@dimen/x32" />

        <cn.redcdn.hvs.accountoperate.info.LimitEditText
            android:id="@+id/medical_position_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x100"
            android:background="@null"
            android:focusable="true"
            android:hint="@string/input_job"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#8d8d8d"
            android:textSize="@dimen/x28" />

    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/x692"
        android:layout_height="@dimen/y1"
        android:layout_marginLeft="@dimen/x28"
        android:background="#d9d9d9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y96"
        android:background="#ffffff"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/y28"
            android:text="@string/company_telephone"
            android:textColor="#2d2d2d"
            android:textSize="@dimen/x32" />

        <EditText
            android:id="@+id/medical_officeTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x40"
            android:background="@null"
            android:focusable="true"
            android:hint="@string/input_company_telephone"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#8d8d8d"
            android:textSize="@dimen/x28" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="#d9d9d9" />

    <Button
        android:id="@+id/btn_medical_next"
        android:layout_width="@dimen/x670"
        android:layout_height="@dimen/y94"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/y40"
        android:background="@drawable/button_selector"
        android:text="@string/give_pass"
        android:textColor="#ffffff"
        android:textSize="@dimen/x34" />
</LinearLayout>