<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/y96"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x28"
            android:text="@string/my_name"
            android:textColor="#000000"
            android:textSize="@dimen/x32" />

        <cn.redcdn.hvs.accountoperate.info.LimitEditText
            android:id="@+id/ET_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x190"
            android:background="@null"
            android:focusable="true"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#666666"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/x28" />

        <TextView
            android:id="@+id/name_hint_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x190"
            android:text="@string/input_name"
            android:textColor="#666666"
            android:textSize="@dimen/x28"
            android:visibility="visible" />

        <TextView
            android:id="@+id/name_hint_nameafter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_toRightOf="@id/name_hint_name"
            android:text="@string/input_name_nomodify"
            android:textColor="#666666"
            android:textSize="@dimen/x26"
            android:visibility="visible" />
    </RelativeLayout>
</LinearLayout>