<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/meetingadd_dialog"
        android:orientation="vertical"
        android:padding="0dp" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:id="@+id/subscribe_rl">
            <TextView
                android:id="@+id/subscrbe_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/subscribe"
                android:textColor="#323233"
                android:layout_centerInParent="true"
                android:textSize="@dimen/x36" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="#e3e4e5" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:id="@+id/officialcard_rl">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/official_card"
                android:textColor="#323233"
                android:layout_centerInParent="true"
                android:textSize="@dimen/x36" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="#e3e4e5" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:id="@+id/cancel_rl">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/btn_cancle"
                android:textColor="#323233"
                android:layout_centerInParent="true"
                android:textSize="@dimen/x36"/>
                />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>